# stockMarket

./: .buildinfo  .gitignore  AAL_balance_annual.csv  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.json
.github/workflows/: docs.yml
_modules/: index.html
_modules/stockMarket/: api.html
_sources/: index.rst.txt
_sources/code/: stockMarket.config.rst.txt  stockMarket.rst.txt  (+22 more)
code/: stockMarket.api.html  stockMarket.config.html  stockMarket.core.api.html  stockMarket.core.contract.html  stockMarket.core.contracts.html  stockMarket.core.financialStatement.balance.html  stockMarket.core.financialStatement.cashflow.html  stockMarket.core.financialStatement.html  stockMarket.core.financialStatement.income.html  stockMarket.core.html  stockMarket.core.pricing.html  stockMarket.core.screener.html  stockMarket.core.technicals.html  stockMarket.core.tickerGenerator.html  stockMarket.html  stockMarket.ib.finReports.html  stockMarket.ib.finReportsMerger.html  stockMarket.ib.html  stockMarket.ranking.html  stockMarket.ranking.ranking.html  stockMarket.ranking.rankingFlag.html  stockMarket.ranking.rankingObject.html  stockMarket.ranking.rankingPlotter.html  stockMarket.ranking.rankingResult.html  stockMarket.ranking.specialRankingObjects.html  stockMarket.sec_edgar.downloader.html  stockMarket.sec_edgar.financialReportChecker.html  stockMarket.sec_edgar.financialReportCollecter.html  stockMarket.sec_edgar.financialReportReader.html  stockMarket.sec_edgar.html  stockMarket.technicalRanking.html  stockMarket.technicalRanking.technicalRanking.html  stockMarket.utils.caching.html  stockMarket.utils.emails.html  stockMarket.utils.enums.html  stockMarket.utils.html  stockMarket.utils.period.html  stockMarket.yfinance.basicInfo.html  stockMarket.yfinance.calendar.html  stockMarket.yfinance.html
data/: basic_info.csv  calendar.csv  earnings_dates copy.csv  earnings_dates.csv  euro_stoxx600.csv  euro_stoxx600.xlsx  russell2000.csv
financialStatments/: balanceSheet.html  cashflow.html  financialStatments.html  general.html  incomeStatement.html
notebooks/: 10k.ipynb  10k_xlsx_problems.txt  alphavantage.ipynb  btc_trade.ipynb  earning_dates.csv  financialData.ipynb  ibkr.ipynb  meta_data_logger.txt  predict_stock_price_using_lstm_in_pytorch  predictions.ipynb  pricing.csv  pricing.ipynb  problem_stocks.txt  problematic_sp500_ibkr.txt  ranking.ipynb  ranking_contracts.csv  result_logger.txt  ru2000_price_problems.txt  ru_problem_stocks.txt  screened_contracts.csv  screening.ipynb  selected_companies.csv  strategy1.ipynb  strategy1_output.txt  technicalAnalysis.ipynb  template_benno.txt  test.csv  test10k.ipynb  yfinance.ipynb
stockMarket/: __init__.py  _version.py  api.py  config.py  earning_dates.py  finReports.py  screeningData.py  stockData.py  stockScreener.py
stockMarket.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+10945 files in other folders)
